Fix css for writer on mobile

--- a/app/src/scss/_writer.scss
+++ b/app/src/scss/_writer.scss
@@ -2,8 +2,11 @@
     width: 100%;
 }
 
-.children .message .writer {
-    margin-left: 5rem;
+@media (min-width: map-get($grid-breakpoints, "md")) {
+    .children .message .writer {
+        margin-left: 5rem;
+        margin-bottom: 1rem;
+    }
 }
 
 @media (min-width: map-get($grid-breakpoints, "md")) {
